--- a/css/modal.css
+++ b/css/modal.css
@@ -18,11 +18,13 @@
 
 .modal{
   background-color: #ffffff;
-  min-width: 300px;
+  width: 80vw;
+  max-width: 600px;
   padding: 40px;
   border: 10px solid #FB5;
   box-shadow: 0 0 0 10px white;
   position: relative;
+  box-sizing: border-box;
 }
 
 @keyframes modal{
@@ -46,13 +48,10 @@
   border: 4px solid white;
   border-radius: 50%;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .3);
-  background-color: #E54;
+  background: #E54 url('../img/fechar.svg') no-repeat center center;
   top: -30px;
   right: -30px;
   position: absolute;
-  font-size: 1.2rem;
-  color: white;
-  font-family: 'IBM Plex Mono', monospace;
   cursor: pointer;
 }
 
@@ -67,6 +66,8 @@
   width: 100%;
   padding: .7rem .5rem;
   box-sizing: border-box;
+  border: 2px solid #222;
+  border-radius: 0px;
 }
 
 .modal button[type="submit"]{
